Organized imports, fixed top bar issue on mobile, added some sidebar options

--- a/client/main.css
+++ b/client/main.css
@@ -57,8 +57,24 @@ body {
   margin: 0 auto;
 }
 
+.mobile-hide {
+  display: inline;
+}
+
+.mobile-only {
+  display: none;
+}
+
 @media screen and (max-width: 700px){
   .container {
     width: 90%;
+  }
+
+  .mobile-only{
+    display: inline;
+  }
+
+  .mobile-hide{
+    display: none;
   }
 }
